--- a/Tarea1/app/src/main/res/layout/activity_main.xml
+++ b/Tarea1/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
@@ -12,7 +12,7 @@
     tools:context="liobouchan.tarea1.MainActivity">
 
     <TextView
-        android:textSize="40px"
+        android:textSize="18sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Alumnos:" />
@@ -20,16 +20,44 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Juárez Bouchan José Leonardo" />
+        android:text="Juárez Bouchan José Leonardo"
+        android:layout_x="103dp"
+        android:layout_y="42dp"
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Paniagua Hernández Jesús" />
+        android:text="Paniagua Hernández Jesús"
+        android:layout_x="129dp"
+        android:layout_y="73dp"
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Introduce un número:"
-        android:id="@+id/textView" />
-</LinearLayout>
+        android:id="@+id/textView"
+        android:layout_x="4dp"
+        android:layout_y="143dp" />
+
+    <EditText
+        android:layout_width="174dp"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Número"
+        android:ems="10"
+        android:layout_x="173dp"
+        android:layout_y="140dp"
+        android:id="@+id/editTextNumero"
+        android:textSize="14sp" />
+
+    <Button
+        android:text="Calcular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_x="135dp"
+        android:layout_y="249dp"
+        android:id="@+id/buttonCalcular" />
+
+</AbsoluteLayout>
