--- a/NumeroMaravilloso/app/src/main/res/layout/activity_main.xml
+++ b/NumeroMaravilloso/app/src/main/res/layout/activity_main.xml
@@ -13,5 +13,54 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
+        android:text="Alumnos" />
+
+    <TextView
+        android:text="Juarez Bouchan Jose Leonardo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginStart="75dp"
+        android:layout_marginTop="17dp"
+        android:id="@+id/textView3" />
+
+    <TextView
+        android:text="Paniagua Hernández Jesús"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView3"
+        android:layout_alignStart="@+id/textView3"
+        android:layout_marginTop="18dp"
+        android:id="@+id/textView5" />
+
+    <TextView
+        android:text="Introduce un Número:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="32dp"
+        android:id="@+id/textView6" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Introduce número"
+        android:ems="10"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="21dp"
+        android:id="@+id/editTextNumero" />
+
+    <Button
+        android:text="Maravilloso"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="29dp"
+        android:id="@+id/buttonMaravilloso"
+        android:layout_below="@+id/editTextNumero"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
