--- a/Ecuacion/app/src/main/res/layout/activity_resultado.xml
+++ b/Ecuacion/app/src/main/res/layout/activity_resultado.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_resultado"
     android:layout_width="match_parent"
@@ -19,4 +19,4 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Resultado X2" />
-</GridLayout>
+</LinearLayout>
